# gravit-grover

./: .codecov.yml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  arXiv_README.txt  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  good-first-issue.md
.github/workflows/: ci.yml  docs.yml
cli/: run_network.py  run_node.py
core/consensus/: gossip.py  mixing.py  security.py  spectral_gap.py
core/engine/: grover_engine.py  memory.py  objective.py
core/gower/: clustering.py  consistency.py  gower_distance.py  similarity.py
core/metrics/: kl.py  uncertainty.py  wasserstein.py
core/probability/: entropy.py  multiplicative_weights.py
docs/api/: openapi.yaml
docs/architecture/: consensus.md  gower_layer.md  protocol.md  security.md
docs/whitepaper/: gravit_grover.tex  references.bib
experiments/notebooks/: 01_gower_amplification_poc.ipynb
llm/generators/: local_generator.py  openai_generator.py
llm/validators/: coherence_validator.py
network/: messages.proto  node.py  transport.py
tests/: test_consensus.py  test_gower.py
